--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "devDependencies": {
         "axios": "^1.6.4",
         "laravel-vite-plugin": "^1.0.0",
+        "sass-embedded": "^1.83.0",
         "vite": "^5.0.0"
     },
     "dependencies": {
         "@vitejs/plugin-vue": "^5.2.1",
+        "bootstrap": "^5.3.3",
         "pinia": "^2.3.0",
         "vue": "^3.5.13",
         "vue-router": "^4.5.0"
