--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
         "axios": "^1.6.4",
         "laravel-vite-plugin": "^1.0.0",
         "sass-embedded": "^1.83.0",
+        "shiki": "^1.24.4",
         "vite": "^5.0.0"
     },
     "dependencies": {
+        "@codemirror/lang-javascript": "^6.2.2",
         "@vitejs/plugin-vue": "^5.2.1",
         "bootstrap": "^5.3.3",
+        "codemirror": "^6.0.1",
         "pinia": "^2.3.0",
+        "thememirror": "^2.0.1",
         "vue": "^3.5.13",
         "vue-router": "^4.5.0"
     }
