--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     },
     "devDependencies": {
         "axios": "^1.6.4",
+        "fast-glob": "^3.3.3",
         "laravel-vite-plugin": "^1.0.0",
         "sass-embedded": "^1.83.0",
         "shiki": "^1.24.4",
-        "vite": "^5.0.0"
+        "vite": "^5.0.0",
+        "vite-plugin-svg-icons": "^2.0.1"
     },
     "dependencies": {
         "@codemirror/lang-javascript": "^6.2.2",
