--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@vueuse/core": "^13.3.0",
         "axios": "^1.6.4",
         "fast-glob": "^3.3.3",
         "laravel-vite-plugin": "^1.0.0",
